Commit from ASUS laptop
